Added Test Project

--- a/V1/src/Tomappto.Api/appsettings.json
+++ b/V1/src/Tomappto.Api/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=localhost; Database=Tomappto; Trusted_Connection=True;"
+    "Default": "Server=.\\LOCAL2012; Database=Tomappto; Trusted_Connection=True;"
   }
 }
